# rulo

./: .gitignore  README.md  README.zh-CN.md  a.txt  pom.xml  ruoyi-rust
admin/: pom.xml
doc/: conventions.md  todo.md
l2-admin/: pom.xml
l2-common/: pom.xml
l2-framework/: pom.xml
l2-rust/: .env  Cargo.toml
l2-rust/src/: main.rs
l2-rust/src/handlers/: auth_handler.rs  blog_handler.rs  mod.rs  tag_handler.rs
l2-rust/src/models/: article.rs  mod.rs  tag.rs  user.rs
l2-rust/src/services/: auth_service.rs  blog_service.rs  mod.rs  tag_service.rs
l2-rust/src/utils/: db.rs  error.rs  mod.rs  response.rs  routes.rs
l2-server/: Cargo.toml
l2-server/config/: default.toml
l2-server/src/: main.rs  system.rs
l2-server/src/system/: user.rs
l2-ui/: index.html  package.json  tsconfig.json  vite.config.ts
l2-ui/public/: config.json
l2-ui/src/: App.vue  main.ts  router.ts
l2-ui/src/layout/: MainLayout.vue
l2-ui/src/router/: router.ts
l2-ui/src/store/: user.ts
l2-ui/src/style/: base.css
l2-ui/src/type/: article.ts  user.ts
l2-ui/src/util/: dateFormat.ts  request.ts
l2-ui/src/view/: Home.vue  Login.vue  Post.vue  Register.vue  SaveArticle.vue  User.vue
l2-ui/vite/plugins/: setup-extend.ts
rulo-admin/: package.json  tsconfig.json  vite.config.ts
rulo-admin/public/: config.json
rulo-admin/src/: App.vue  components.d.ts  env.d.ts
rulo-admin/src/component/: AiChatDrawer.vue  LayoutSetting.vue
rulo-admin/src/directive/: auth.ts
rulo-admin/src/layout/: AdminLayout.vue
rulo-admin/src/router/: router.ts
rulo-admin/src/store/: user.ts
rulo-admin/src/style/: base.css
rulo-admin/src/type/: common.ts  dept.ts  permission.ts  user.ts
rulo-admin/src/util/: common.ts  message.ts  request.ts
rulo-admin/src/view/: Home.vue  (+1 more)
rulo-api/: .env  Cargo.toml
rulo-api/app/: Cargo.toml
rulo-api/common/: Cargo.toml
rulo-api/common/src/: bootstrap.rs  config.rs  error.rs  lib.rs  model.rs  state.rs
rulo-api/common/src/constant/: redis_constant.rs
rulo-api/common/src/util/: id_util.rs  ip_util.rs  storage_util.rs
rulo-api/config/: default.toml.bak
rulo-api/macros/: Cargo.toml
rulo-api/migrations/: 20260327000000_init.sql  20260422103247_add_sys_dept.sql  20260422135058_reset_roles_users.sql  20260422150000_reset_user_passwords.sql  20260423000000_init.sql
rulo-client/: tsconfig.json
rulo-server/: .env  Cargo.toml
rulo-server/app/: Cargo.toml
rulo-server/app/src/: lib.rs  main.rs
rulo-server/app/src/ai/: router.rs
rulo-server/app/src/ai/chat/: handler.rs  service.rs
rulo-server/app/src/middleware/: rate_limit.rs
rulo-server/app/src/swagger/: doc.rs
rulo-server/app/src/system/: router.rs
rulo-server/app/src/system/audit/: middleware.rs  model.rs  router.rs  service.rs
rulo-server/app/src/system/auth/: model.rs  router.rs  service.rs
rulo-server/app/src/system/file/: router.rs  service.rs
rulo-server/app/src/system/menu/: handler.rs  model.rs  router.rs  service.rs
rulo-server/app/src/system/monitor/: router.rs  service.rs
rulo-server/app/src/system/permission/: handler.rs  model.rs  router.rs
rulo-server/app/src/system/role/: handler.rs  model.rs  router.rs
rulo-server/app/src/system/user/: handler.rs  model.rs  router.rs
rulo-server/app/tests/: permission_service_test.rs  role_service_test.rs  user_service_test.rs
rulo-server/common/: Cargo.toml
rulo-server/common/src/: bootstrap.rs  constant.rs  extractor.rs  model.rs  util.rs
rulo-server/common/src/util/: serde_util.rs  storage_util.rs
rulo-server/config/: default.toml.bak
rulo-server/macros/: Cargo.toml
rulo-server/macros/src/: lib.rs
rulo-server/migrations/: 20260310091035_init_schema.sql  20260311081232_add_rbac_schema.sql  20260320100000_add_audit_log.sql  20260320160000_add_perm_code_unique_index.sql  20260324010000_add_user_avatar.sql
rulo-server/rulo-app/: Cargo.toml
rulo-server/rulo-app/src/: main.rs  router.rs  swagger.rs  system.rs
rulo-server/rulo-app/src/ai/chat/: handler.rs  model.rs  service.rs
rulo-server/rulo-app/src/middleware/: rate_limit.rs
rulo-server/rulo-app/src/swagger/: doc.rs  router.rs
rulo-server/rulo-app/src/system/: permission.rs  router.rs  user.rs
rulo-server/rulo-app/src/system/audit/: handler.rs  middleware.rs  mod.rs  model.rs  service.rs
rulo-server/rulo-app/src/system/auth/: handler.rs  model.rs  router.rs  service.rs
rulo-server/rulo-app/src/system/file/: handler.rs  router.rs  service.rs
rulo-server/rulo-app/src/system/menu/: handle.rs  handler.rs  model.rs  router.rs  service.rs
rulo-server/rulo-app/src/system/monitor/: handler.rs  model.rs  router.rs
rulo-server/rulo-app/src/system/permission/: handle.rs  handler.rs  model.rs  router.rs  service.rs
rulo-server/rulo-app/src/system/role/: handle.rs  handler.rs  model.rs  router.rs  service.rs
rulo-server/rulo-app/src/system/user/: handle.rs  handler.rs  model.rs  router.rs  service.rs
rulo-server/rulo-app/tests/: permission_service_test.rs  role_service_test.rs
rulo-server/rulo-common/: Cargo.toml
rulo-server/rulo-common/src/: api_result.rs  bootstrap.rs  config.rs  error.rs  lib.rs  model.rs  r.rs  result.rs  state.rs  util.rs
rulo-server/rulo-common/src/constant/: redis_constant.rs
rulo-server/rulo-common/src/util/: id_util.rs  jwt_util.rs  password_util.rs  redis_util.rs  storage_util.rs
rulo-server/rulo-macro/src/: lib.rs
rulo-server/src/: state.rs
rulo-server/src/system/user/: handle.rs
rulo-ui-admin/: index.html  package.json
rulo-ui-admin/src/: components.d.ts  env.d.ts  main.ts
rulo-ui-client/: index.html  package.json  tsconfig.json  vite.config.ts
rulo-ui-client/public/: config.json
rulo-ui-client/src/: .env.development  components.d.ts  main.ts
sql/: dump-rulo-202604221725.sql  dump-rulo-202604230951.sql  l2.sql  l2_pg.sql  l2_postgresql.sql  rename_tables.sql  rulo-20260320174610.sql  rulo-data-20260327170944.sql
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
ui/src/: .env.production  App.vue  main.js  main.ts  router.js  router.ts
(+283 files in other folders)
