[package]
name = "l2-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization / deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Chrono for date/time
chrono = { version = "0.4", features = ["serde"] }

# Database toolkit (PostgreSQL + tokio + rustls + macros + chrono)
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }

# Password hashing
bcrypt = "0.16"

# Redis client
redis = { version = "1.0", features = ["tokio-comp"] }

# Random numbers
rand = "0.8"

# Sessions for axum
# axum-sessions = "0.8"
axum_session = { version = "0.17.1" }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CORS support
tower-http = { version = "0.6", features = ["cors"] }

