[workspace]
members = ["rulo-app","rulo-common"]
resolver = "3"

[workspace.dependencies]
# 异步 web
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
# 日期和时间
chrono = { version = "0.4.44", features = ["serde"] }
# 配置 toml
config = { version = "0.15.19", features = ["toml"] }
# 序列化和反序列化
serde = { version = "1.0.228", features = ["derive"] }
# JSON 工具包, to_string, from_str
serde_json = "1.0.149"
# 数据库连接
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
# redis 缓存连接
redis = { version = "1.0.4", features = ["tokio-comp"] }
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1"] }
# 日志
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# 密码哈希加密 
argon2 = "0.5.3"
# jwt 生成 token
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
