[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
rs-snowflake = { workspace = true }
validator = { workspace = true }
rust-s3 = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
