[package]
name = "rulo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
rulo-common = { path = "../common" }
rulo-macro = { path = "../macros" }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
reqwest = { workspace = true }
validator = { workspace = true }
futures-util = { workspace = true }
axum-extra = { workspace = true }
uuid = { workspace = true }
rust-s3 = { workspace = true }
async-stream = "0.3"
