[package]
name = "rulo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
rulo-common = { path = "../rulo-common" }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
