[package]
name = "rulo-common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
